debugging the list of movies, urls.

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -165,7 +165,7 @@
        "4             3       tbd  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -295,7 +295,7 @@
        "4                    50  It's hard to feel energized by a historical ep...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "'http://image.tmdb.org/t/p/'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        " 'success': False}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "'/eUL2USo8weZHhNMJuWwKtegJzhL.jpg'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -580,6 +580,7 @@
     "keyerrors_f = open(\"keyerrors.txt\", \"w\")\n",
     "movies_not_found_f = open(\"movies_not_found.txt\", \"w\")\n",
     "posters_not_found_f = open(\"posters_not_found.txt\", \"w\")\n",
+    "url_list_f = open(\"url_list.txt\", \"w\")\n",
     "\n",
     "print('-----------------------------')\n",
     "print('Begin Data Retreival. Rows left.')\n",
@@ -595,6 +596,7 @@
     "        if (response['total_results'] != 0) and (response['results'][0]['poster_path'] is not None):\n",
     "            url = base_url + size + response['results'][0]['poster_path']\n",
     "            url_list.append({title, url})\n",
+    "            url_list_f.write(title + \", \" + url + \"\\n\")\n",
     "        elif response['total_results'] == 0:\n",
     "            #error_list.append(f'{title} not found. Skipping...')\n",
     "            #movie_not_found_list.append(title)\n",
@@ -624,6 +626,7 @@
     "        keyerrors_f.write(title + '\\n')\n",
     "    \n",
     "# close the files.\n",
+    "url_list_f.close()\n",
     "keyerrors_f.close()\n",
     "movies_not_found_f.close()\n",
     "posters_not_found_f.close()\n",
@@ -640,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -690,18 +693,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8740</td>\n",
-       "      <td>Solas</td>\n",
        "      <td>http://image.tmdb.org/t/p/w500/yRMex0csH3oI05Y...</td>\n",
+       "      <td>Solas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8741</td>\n",
-       "      <td>J.T. Leroy</td>\n",
        "      <td>http://image.tmdb.org/t/p/w500/43ffZhMCWQhzMne...</td>\n",
+       "      <td>J.T. Leroy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8742</td>\n",
-       "      <td>Donnybrook</td>\n",
        "      <td>http://image.tmdb.org/t/p/w500/jcuEDKnM3uThdz7...</td>\n",
+       "      <td>Donnybrook</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -711,19 +714,19 @@
        "                                            movie_title  \\\n",
        "8738  http://image.tmdb.org/t/p/w500/vIb9kzseUun3QGo...   \n",
        "8739                                      No Home Movie   \n",
-       "8740                                              Solas   \n",
-       "8741                                         J.T. Leroy   \n",
-       "8742                                         Donnybrook   \n",
+       "8740  http://image.tmdb.org/t/p/w500/yRMex0csH3oI05Y...   \n",
+       "8741  http://image.tmdb.org/t/p/w500/43ffZhMCWQhzMne...   \n",
+       "8742  http://image.tmdb.org/t/p/w500/jcuEDKnM3uThdz7...   \n",
        "\n",
        "                                             poster_url  \n",
        "8738                                         Wild Reeds  \n",
        "8739  http://image.tmdb.org/t/p/w500/eUL2USo8weZHhNM...  \n",
-       "8740  http://image.tmdb.org/t/p/w500/yRMex0csH3oI05Y...  \n",
-       "8741  http://image.tmdb.org/t/p/w500/43ffZhMCWQhzMne...  \n",
-       "8742  http://image.tmdb.org/t/p/w500/jcuEDKnM3uThdz7...  "
+       "8740                                              Solas  \n",
+       "8741                                         J.T. Leroy  \n",
+       "8742                                         Donnybrook  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
