--- a/Project.ipynb
+++ b/Project.ipynb
@@ -596,7 +596,7 @@
     "        if (response['total_results'] != 0) and (response['results'][0]['poster_path'] is not None):\n",
     "            url = base_url + size + response['results'][0]['poster_path']\n",
     "            url_list.append({title, url})\n",
-    "            url_list_f.write(title + \", \" + url + \"\\n\")\n",
+    "            url_list_f.write(title + \"\\t\" + url + \"\\n\") # make it Tab delimited instead.\n",
     "        elif response['total_results'] == 0:\n",
     "            #error_list.append(f'{title} not found. Skipping...')\n",
     "            #movie_not_found_list.append(title)\n",
